// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiConfirmModal renders EuiConfirmModal 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-label="aria-label"
      class="euiModal euiModal--maxWidth-default euiModal--confirmation testClass1 testClass2"
      data-test-subj="test subject string"
      tabindex="0"
    >
      <button
        aria-label="Closes this modal window"
        class="euiButtonIcon euiButtonIcon--xSmall euiModal__closeIcon emotion-euiButtonIcon-empty-text-hoverStyles"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
      <div
        class="euiModalHeader"
      >
        <div
          class="euiModalHeader__title"
          data-test-subj="confirmModalTitleText"
        >
          <h1>
            A confirmation modal
          </h1>
        </div>
      </div>
      <div
        class="euiModalBody"
      >
        <div
          class="euiModalBody__overflow"
        >
          <div
            class="euiText emotion-euiText-m"
            data-test-subj="confirmModalBodyText"
          >
            <p>
              This is a confirmation modal example
            </p>
          </div>
        </div>
      </div>
      <div
        class="euiModalFooter"
      >
        <button
          class="euiButtonEmpty css-9t7nyf-empty-primary"
          data-test-subj="confirmModalCancelButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Cancel Button Text
            </span>
          </span>
        </button>
        <button
          class="euiButton emotion-euiButtonDisplay-m-m-fill-primary"
          data-test-subj="confirmModalConfirmButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Confirm Button Text
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;

exports[`EuiConfirmModal renders EuiConfirmModal without EuiModalBody, if empty 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-label="aria-label"
      class="euiModal euiModal--maxWidth-default euiModal--confirmation testClass1 testClass2"
      data-test-subj="test subject string"
      tabindex="0"
    >
      <button
        aria-label="Closes this modal window"
        class="euiButtonIcon euiButtonIcon--xSmall euiModal__closeIcon emotion-euiButtonIcon-empty-text-hoverStyles"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
      <div
        class="euiModalHeader"
      >
        <div
          class="euiModalHeader__title"
          data-test-subj="confirmModalTitleText"
        >
          <h1>
            A confirmation modal
          </h1>
        </div>
      </div>
      <div
        class="euiModalFooter"
      >
        <button
          class="euiButtonEmpty css-9t7nyf-empty-primary"
          data-test-subj="confirmModalCancelButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Cancel Button Text
            </span>
          </span>
        </button>
        <button
          class="euiButton emotion-euiButtonDisplay-m-m-fill-primary"
          data-test-subj="confirmModalConfirmButton"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Confirm Button Text
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;
